src/test/deca/context/valid/created/ifint.deca
{
    boolean i = false;
    if (i) {

    }
}