src/test/deca/context/invalid/created/test-a-9.deca
class A{
    int x;
    int d(int x){
        x = x;
    return x == x;
    }
}